# AI

./: README.md
yolov11_det_pytorch/: build.py  pyproject.toml
yolov11_det_pytorch/src/: main.py
yolov11_det_pytorch/src/yolov11_det/: __init__.py  yolov11_det.py
yolov11_det_pytorch/src/yolov11_det.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
yolov11_det_pytorch/src/yolov11_det_pytorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
