[project]
name = "yolov11-det-pytorch"
version = "0.1.0"
description = "YOLOv11Det based ultralytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.184",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "setuptools>=75.3.2",
    "toml>=0.10.2",
]